--- a/pacman.html
+++ b/pacman.html
@@ -1,6 +1,28 @@
 <html>
  <h1 style=color:gold><center>PACMAN</center></h1>
  <body style=background-color:black></body>
+ <style>
+.button {
+  background-color: Gold;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+      .button {
+  -webkit-transition-duration: 0.6s; /* Safari */
+  transition-duration: 0.6s;
+}
+.button:hover {
+  background-color:#896d0e ; 
+  color: white;
+</style>
+  <a href="https://gautham2006.github.io/arcade/Arcade.html" class="button">Back</a>
  <br>
   <br>
    <br>
